--- a/app/html/options.html
+++ b/app/html/options.html
@@ -24,6 +24,7 @@
 <body style="overflow: auto">
 <div ng-controller="OptionsCtrl" class="preprosOptions">
 <h4>Prepros App Options</h4>
+<div class="alert alert-info">Settings apply only to new files and projects</div>
 
 <div class="tabbable tabs-left" style="border-bottom: 1px solid #CCC;margin-top: 25px;">
     <ul class="nav nav-tabs">
@@ -41,6 +42,10 @@
 
         <div class="tab-pane active" id="general">
             <label>
+                <input type="checkbox" ng-model="userConfig.enableNotifications">
+                <span class="label-desc">Enable Desktop Notifications</span>
+            </label>
+            <label>
                 <span class="label-desc">Css Folder</span><br>
                 <input type="text" ng-model="userConfig.cssPath">
             </label>
@@ -53,8 +58,9 @@
                 <input type="text" ng-model="userConfig.htmlExtension">
             </label>
             <label>
-                <input type="checkbox" ng-model="userConfig.enableNotifications">
-                <span class="label-desc">Enable Desktop Notifications</span>
+                <span class="label-desc">Exclude files that contain following patterns</span>
+                <span class="muted" style="display: block">Please enter comma separated list</span>
+                <input type="text" ng-model="userConfig.filterPatterns">
             </label>
         </div>
 
@@ -220,7 +226,9 @@
 
 
     </div>
+
 </div>
+
 <!-- Done -->
 <button ng-click="done()" class="pull-right" style="margin: 20px;">Done</button>
 
