Keeping devtools in the final app so that the user can provide feedback

--- a/app/app.html
+++ b/app/app.html
@@ -17,7 +17,7 @@
 
     <script>
 
-        //Devtools for development mode; remove this code from production app
+        //Devtools for developers
         window.addEventListener('keydown', function (e) {
             if (e.keyIdentifier === 'F12') {
                 require('nw.gui').Window.get().showDevTools();
