Sass debug info

--- a/app/app.html
+++ b/app/app.html
@@ -217,6 +217,10 @@
                                 <span class="label-desc">Line numbers</span>
                             </label>
                             <label>
+                                <input type="checkbox" ng-model="selectedFile.config.debug">
+                                <span class="label-desc">Debug Info</span>
+                            </label>
+                            <label>
                                 <input type="checkbox" ng-model="selectedFile.config.compass">
                                 <span class="label-desc">Use Compass</span>
                             </label>
@@ -239,6 +243,10 @@
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.lineNumbers">
                                 <span class="label-desc">Line numbers</span>
+                            </label>
+                            <label>
+                                <input type="checkbox" ng-model="selectedFile.config.debug">
+                                <span class="label-desc">Debug Info</span>
                             </label>
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.compass">
