--- a/app/html/options.html
+++ b/app/html/options.html
@@ -92,6 +92,10 @@
                 <span class="label-desc">Line numbers</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.scss.debug">
+                <span class="label-desc">Debug Info</span>
+            </label>
+            <label>
                 <input type="checkbox" ng-model="userConfig.scss.compass">
                 <span class="label-desc">Use Compass</span>
             </label>
@@ -115,6 +119,10 @@
             <label>
                 <input type="checkbox" ng-model="userConfig.sass.lineNumbers">
                 <span class="label-desc">Line numbers</span>
+            </label>
+            <label>
+                <input type="checkbox" ng-model="userConfig.sass.debug">
+                <span class="label-desc">Debug Info</span>
             </label>
             <label>
                 <input type="checkbox" ng-model="userConfig.sass.compass">
