Added coffee-script bare option #39

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -185,6 +185,10 @@
                 <span class="label-desc">Auto Compile</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.coffee.bare">
+                <span class="label-desc">Bare</span>
+            </label>
+            <label>
                 <input type="checkbox" ng-model="userConfig.coffee.uglify">
                 <span class="label-desc">Uglify</span>
             </label>
