--- a/app/app.html
+++ b/app/app.html
@@ -286,6 +286,11 @@
                         <div ng-switch-when="coffee">
 
                             <label>
+                                <input type="checkbox" ng-model="selectedFile.config.bare">
+                                <span class="label-desc">Bare</span>
+                            </label>
+
+                            <label>
                                 <input type="checkbox" ng-model="selectedFile.config.uglify">
                                 <span class="label-desc">Uglify</span>
                             </label>
