--- a/app/app.html
+++ b/app/app.html
@@ -62,6 +62,7 @@
     <script src="scripts/services/fileTypes/coffee.js"></script>
     <script src="scripts/services/fileTypes/jade.js"></script>
     <script src="scripts/services/fileTypes/haml.js"></script>
+    <script src="scripts/services/fileTypes/slim.js"></script>
 
     <!-- Filters -->
     <script src="scripts/filters/project.js"></script>
@@ -328,6 +329,15 @@
                                 </select>
                             </label>
 
+
+                        </div>
+
+                        <div ng-switch-when="slim">
+
+                            <label>
+                                <input type="checkbox" ng-model="selectedFile.config.pretty">
+                                <span class="label-desc">Pretty Output</span>
+                            </label>
 
                         </div>
 
