--- a/app/html/about.html
+++ b/app/html/about.html
@@ -98,7 +98,7 @@
         <div class="tab-content">
             <div class="tab-pane active" id="app-info">
 
-                <p>Prepros is an open source code preprocessing tool written using pure html, css and javascript.</p>
+                <p>Prepros is an open source code preprocessing tool developed using the power of html, css and javascript.</p>
                 <p>It is designed, developed and maintained by <a ng-click="go('authorTwitter')" style="cursor: pointer;">Subash Pathak</a></p>
                 <p>You can hack on Prepros source code on <a ng-click="go('githubUrl')" style="cursor: pointer;">Github</a>. It's under MIT license.</p>
                 <p>Please <a ng-click="go('loveUrl')" style="cursor: pointer;">support developer</a> to make prepros more awesome.</p>
