--- a/app/app.html
+++ b/app/app.html
@@ -127,7 +127,10 @@
         <span class="label-desc">Project Name</span>
         <input ng-model="selectedProject.name" type="text">
     </label>
-
+    <label>
+        <span class="label-desc">Filter Patterns</span>
+        <input type="text" ng-model="selectedProject.config.filterPatterns">
+    </label>
     <label>
         <input type="checkbox" ng-model="selectedProject.config.liveRefresh">
         <span class="label-desc">Live Refresh</span>
