Capitilise acronyms within options screen

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -29,7 +29,7 @@
     <ul class="nav nav-tabs">
         <li class="active"><a href="#general" data-toggle="tab">General</a></li>
         <li><a href="#less" data-toggle="tab">Less</a></li>
-        <li><a href="#scss" data-toggle="tab">Scss</a></li>
+        <li><a href="#scss" data-toggle="tab">SCSS</a></li>
         <li><a href="#sass" data-toggle="tab">Sass</a></li>
         <li><a href="#stylus" data-toggle="tab">Stylus</a></li>
         <li><a href="#jade" data-toggle="tab">Jade</a></li>
@@ -42,15 +42,15 @@
 
         <div class="tab-pane active" id="general">
             <label>
-                <span class="label-desc">Css Folder</span><br>
+                <span class="label-desc">CSS Folder</span><br>
                 <input type="text" ng-model="userConfig.cssPath">
             </label>
             <label>
-                <span class="label-desc">Javascripts Folder</span><br>
+                <span class="label-desc">JavaScripts Folder</span><br>
                 <input type="text" ng-model="userConfig.jsPath">
             </label>
             <label>
-                <span class="label-desc">Html File Extension</span><br>
+                <span class="label-desc">HTML File Extension</span><br>
                 <input type="text" ng-model="userConfig.htmlExtension">
             </label>
             <label>
@@ -80,7 +80,7 @@
             </label>
             <label>
                 <input type="checkbox" ng-model="userConfig.less.compress">
-                <span class="label-desc">Compress Css</span>
+                <span class="label-desc">Compress CSS</span>
             </label>
         </div>
 
@@ -156,7 +156,7 @@
             </label>
             <label>
                 <input type="checkbox" ng-model="userConfig.stylus.compress">
-                <span class="label-desc">Compress Css</span>
+                <span class="label-desc">Compress CSS</span>
             </label>
             <label>
                 <input type="checkbox" ng-model="userConfig.stylus.config.nib">
@@ -226,8 +226,8 @@
             <label>
                 <span class="label-desc">Output Format</span><br>
                 <select ng-model="userConfig.haml.format">
-                    <option value="xhtml">Xhtml</option>
-                    <option value="html5">Html5</option>
+                    <option value="xhtml">XHTML</option>
+                    <option value="html5">HTML5</option>
                 </select>
             </label>
             <label>
