Capitilise acronyms within file options.

--- a/app/app.html
+++ b/app/app.html
@@ -142,7 +142,7 @@
 
     <div ng-show="selectedProject.config.useCustomServer">
         <label>
-            <span class="label-desc">Server Url</span>
+            <span class="label-desc">Server URL</span>
             <input type="text" ng-model="selectedProject.config.customServerUrl">
         </label>
     </div>
@@ -209,7 +209,7 @@
                             </label>
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.compress">
-                                <span class="label-desc">Compress Css</span>
+                                <span class="label-desc">Compress CSS</span>
                             </label>
 
                         </div>
@@ -278,7 +278,7 @@
                             </label>
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.compress">
-                                <span class="label-desc">Compress Css</span>
+                                <span class="label-desc">Compress CSS</span>
                             </label>
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.nib">
@@ -320,8 +320,8 @@
                             <label>
                                 <span class="label-desc">Output Format</span>
                                 <select ng-model="selectedFile.config.format">
-                                    <option value="xhtml">Xhtml</option>
-                                    <option value="html5">Html5</option>
+                                    <option value="xhtml">XHTML</option>
+                                    <option value="html5">HTML5</option>
                                 </select>
                             </label>
                             <label>
@@ -348,7 +348,7 @@
 
                             <label>
                                 <input type="checkbox" ng-model="selectedFile.config.gfm">
-                                <span class="label-desc">Github Flavoured</span>
+                                <span class="label-desc">GitHub Flavoured</span>
                             </label>
 
                             <label>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
 
-                    <button class="compile" ng-click="compile()"> Compile</button>
+                    <button class="compile" ng-click="compile()">Compile</button>
 
                 </div>
             </div>
