Open file with default editor

--- a/app/app.html
+++ b/app/app.html
@@ -168,7 +168,7 @@
                 <ul class="files">
                     <li class="file" ng-repeat="file in files|project|orderBy:'name'">
                         <a ng-href="#/files/{{file.pid}}/{{file.id}}" ng-class="{'active' : selectedFile.id == file.id}"
-                           draggable="false" id="/files/{{file.pid}}/{{file.id}}">
+                           draggable="false" id="/files/{{file.pid}}/{{file.id}}" ng-dblclick="openFile(file.input)">
                             <div class="thumb  {{file.type.toLowerCase()}}"
                                  ng-class="{'no-compile': !file.config.autoCompile}">{{file.type}}
                             </div>
