--- a/app/app.html
+++ b/app/app.html
@@ -87,7 +87,7 @@
 <!-- Sidebar -->
 <div class="sidebar" ng-controller="SidebarCtrl">
     <ul>
-        <li ng-repeat="project in projects">
+        <li ng-repeat="project in projects" ng-dblclick="openProjectFolder(project.path)">
             <a ng-href="#/files/{{project.id}}" draggable="false"
                ng-class="{'active' : selectedProject.id == project.id}">{{project.name}}</a>
         </li>
