refactor use templates for file options

--- a/app/app.html
+++ b/app/app.html
@@ -210,165 +210,8 @@
                         <span class="label-desc">Auto Compile</span>
                     </label>
 
-                    <div ng-switch on="selectedFile.type.toLowerCase()">
-
-                        <div ng-switch-when="less">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.lineNumbers">
-                                <span class="label-desc">Line numbers</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.compress">
-                                <span class="label-desc">Compress CSS</span>
-                            </label>
-
-                        </div>
-
-                        <div ng-switch-when="sass">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.lineNumbers">
-                                <span class="label-desc">Line numbers</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.debug">
-                                <span class="label-desc">Debug Info</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.compass">
-                                <span class="label-desc">Use Compass</span>
-                            </label>
-
-                            <label>
-                                <span class="label-desc">Output Style</span>
-                                <select ng-model="selectedFile.config.outputStyle">
-                                    <option value="compressed">Compressed</option>
-                                    <option value="compact">Compact</option>
-                                    <option value="nested">Nested</option>
-                                    <option value="expanded">Expanded</option>
-                                </select>
-                            </label>
-
-
-                        </div>
-
-                        <div ng-switch-when="scss">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.lineNumbers">
-                                <span class="label-desc">Line numbers</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.debug">
-                                <span class="label-desc">Debug Info</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.compass">
-                                <span class="label-desc">Use Compass</span>
-                            </label>
-
-                            <label>
-                                <span class="label-desc">Output Style</span>
-                                <select ng-model="selectedFile.config.outputStyle">
-                                    <option value="compressed">Compressed</option>
-                                    <option value="compact">Compact</option>
-                                    <option value="nested">Nested</option>
-                                    <option value="expanded">Expanded</option>
-                                </select>
-                            </label>
-
-
-                        </div>
-
-                        <div ng-switch-when="stylus">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.lineNumbers">
-                                <span class="label-desc">Line numbers</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.compress">
-                                <span class="label-desc">Compress CSS</span>
-                            </label>
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.nib">
-                                <span class="label-desc">Use Nib</span>
-                            </label>
-
-                        </div>
-
-                        <div ng-switch-when="coffee">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.bare">
-                                <span class="label-desc">Bare</span>
-                            </label>
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.uglify">
-                                <span class="label-desc">Uglify</span>
-                            </label>
-
-                        </div>
-
-                        <div ng-switch-when="jade">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.pretty">
-                                <span class="label-desc">Pretty Output</span>
-                            </label>
-
-                        </div>
-
-                        <div ng-switch-when="haml">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.doubleQuotes">
-                                <span class="label-desc">Double quotes</span>
-                            </label>
-
-                            <label>
-                                <span class="label-desc">Output Format</span>
-                                <select ng-model="selectedFile.config.format">
-                                    <option value="xhtml">XHTML</option>
-                                    <option value="html5">HTML5</option>
-                                </select>
-                            </label>
-                            <label>
-                                <span class="label-desc">Output Style</span>
-                                <select ng-model="selectedFile.config.outputStyle">
-                                    <option value="indented">Indented</option>
-                                    <option value="ugly">Ugly</option>
-                                </select>
-                            </label>
-
-
-                        </div>
-
-                        <div ng-switch-when="slim">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.pretty">
-                                <span class="label-desc">Pretty Output</span>
-                            </label>
-
-                        </div>
-
-                        <div ng-switch-when="md">
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.gfm">
-                                <span class="label-desc">GitHub Flavoured</span>
-                            </label>
-
-                            <label>
-                                <input type="checkbox" ng-model="selectedFile.config.sanitize">
-                                <span class="label-desc">Sanitize Output</span>
-                            </label>
-
-                        </div>
-                    </div>
+                    <!-- Load options template -->
+                    <div ng-include src="'templates/' + selectedFile.type + '.html'"></div>
 
                     <button class="compile" ng-click="compile()">Compile</button>
 
