--- a/app/app.html
+++ b/app/app.html
@@ -79,6 +79,7 @@
     <script src="scripts/directives/keyboard-shortcuts.js"></script>
     <script src="scripts/directives/drag-drop-project.js"></script>
     <script src="scripts/directives/log-element.js"></script>
+    <script src="scripts/directives/ng-include-if.js"></script>
 
 </head>
 <body>
@@ -211,7 +212,7 @@
                     </label>
 
                     <!-- Load options template -->
-                    <div ng-include src="'templates/' + selectedFile.type + '.html'"></div>
+                    <div ng-include-if="selectedFile.type" src="'templates/' + selectedFile.type + '.html'"></div>
 
                     <button class="compile" ng-click="compile()">Compile</button>
 
