moved file type templates

--- a/app/app.html
+++ b/app/app.html
@@ -212,7 +212,7 @@
                     </label>
 
                     <!-- Load options template -->
-                    <div ng-include-when="selectedFile.type" src="'templates/' + selectedFile.type + '.html'"></div>
+                    <div ng-include-when="selectedFile.type" src="'templates/fileTypes/' + selectedFile.type + '.html'"></div>
 
                     <button class="compile" ng-click="compile()">Compile</button>
 
